# djvagas

./: .coveragerc  README.md  conftest.py  env  pyproject.toml  pytest.ini  requirements.txt
project/: roles.py  urls.py
project/account/: admin.py  apps.py  facade.py  forms.py  managers.py  mixins.py  models.py  urls.py
project/account/forms/: __init__.py  user_signup.py
project/account/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profilecandidate_schooling.py
project/account/models/: __init__.py  contact.py  profile_candidate.py  user.py
project/account/templates/account/: create.html  login.html
project/account/views/: __init__.py  create.py  login.py  logout.py
project/common/: urls.py
project/common/views/: home.py
project/job/: admin.py  apps.py  facade.py  mixins.py  models.py  urls.py
project/job/forms/: __init__.py  base_model_form.py  job_application.py  job_create.py  job_update.py
project/job/management/commands/: job_create_data.py
project/job/migrations/: 0001_initial.py  0002_alter_salary_options_alter_schooling_options.py  0002_application_score.py  0002_job_checked.py  0003_alter_application_score.py
project/job/templates/job/: application_management.html  job_application.html  (+5 more)
project/job/views/: __init__.py  application.py  application_management.py  create.py  delete.py  detail.py  job_management.py  list.py  management.py  search.py  update.py
project/settings/: __init__.py  assets.py  debug_toolbar.py  environment.py  installed_apps.py  locale.py  mail.py  templates.py
project/templates/: base.html
(+24 files in other folders)
