[tool.poetry]
name = "djvagas"
version = "0.1.0"
description = ""
authors = ["Ricardo-Jackson-Ferrari <ricjferrari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-widget-tweaks = "^1.4.12"
python-decouple = "^3.6"
django-role-permissions = "^3.1.1"

[tool.poetry.dev-dependencies]
django-extensions = "^3.2.1"
rich = "^12.5.1"
parameterized = "^0.8.1"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
coverage = "^6.4.4"
pip-audit = "^2.4.4"
ipdb = "^0.13.9"
blue = "^0.9.1"
isort = "^5.10.1"
django-debug-toolbar = "^3.6.0"
model-bakery = "^1.7.0"
Faker = "^14.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
